Integrated new programs and priorities

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -147,6 +147,247 @@ en:
     Energy: Energy
     Patriarchy: Patriarchy
     reset_page: Reset the page
+    priorities:
+      Priority 1: Priority 1
+      Priority 2: Priority 2
+      Priority 3: Priority 3
+      Priority 4: Priority 4
+      Priority 5: Priority 5
+      Priority 6: Priority 6
+      Priority 7: Priority 7
+      Priority 8: Priority 8
+      Priority 9: Priority 9
+      Priority 10: Priority 10
+      Priority 11: Priority 11
+      Priority 12: Priority 12
+      Priority 13: Priority 13
+      Priority 14: Priority 14
+      Priority 15: Priority 15
+      Priority 16: Priority 16
+      Priority 17: Priority 17
+      Priority 18: Priority 18
+      Priority 19: Priority 19
+      Priority 20: Priority 20
+      Priority 21: Priority 21
+      Priority 22: Priority 22
+      Priority 23: Priority 23
+      Priority 24: Priority 24
+      Priority 25: Priority 25
+    programs:
+      Program 1: Program 1
+      Program 2: Program 2
+      Program 3: Program 3
+      Program 4: Program 4
+      Program 5: Program 5
+      Program 6: Program 6
+      Program 7: Program 7
+      Program 8: Program 8
+      Program 9: Program 9
+      Program 10: Program 10
+      Program 11: Program 11
+      Program 12: Program 12
+      Program 13: Program 13
+      Program 14: Program 14
+      Program 15: Program 15
+      Program 16: Program 16
+      Program 17: Program 17
+      Program 18: Program 18
+      Program 19: Program 19
+      Program 20: Program 20
+      Program 21: Program 21
+      Program 22: Program 22
+      Program 23: Program 23
+      Program 24: Program 24
+      Program 25: Program 25
+      Program 26: Program 26
+      Program 27: Program 27
+      Program 28: Program 28
+      Program 29: Program 29
+      Program 30: Program 30
+      Program 31: Program 31
+      Program 32: Program 32
+      Program 33: Program 33
+      Program 34: Program 34
+      Program 35: Program 35
+      Program 36: Program 36
+      Program 37: Program 37
+      Program 38: Program 38
+      Program 39: Program 39
+      Program 40: Program 40
+      Program 41: Program 41
+      Program 42: Program 42
+      Program 43: Program 43
+      Program 44: Program 44
+      Program 45: Program 45
+      Program 46: Program 46
+      Program 47: Program 47
+      Program 48: Program 48
+      Program 49: Program 49
+      Program 50: Program 50
+      Program 51: Program 51
+      Program 52: Program 52
+      Program 53: Program 53
+      Program 54: Program 54
+      Program 55: Program 55
+      Program 56: Program 56
+      Program 57: Program 57
+      Program 58: Program 58
+      Program 59: Program 59
+      Program 60: Program 60
+      Program 61: Program 61
+      Program 62: Program 62
+      Program 63: Program 63
+      Program 64: Program 64
+      Program 65: Program 65
+      Program 66: Program 66
+      Program 67: Program 67
+      Program 68: Program 68
+      Program 69: Program 69
+      Program 70: Program 70
+      Program 71: Program 71
+      Program 72: Program 72
+      Program 73: Program 73
+      Program 74: Program 74
+      Program 75: Program 75
+      Program 76: Program 76
+      Program 77: Program 77
+      Program 78: Program 78
+      Program 79: Program 79
+      Program 80: Program 80
+      Program 81: Program 81
+      Program 82: Program 82
+      Program 83: Program 83
+      Program 84: Program 84
+      Program 85: Program 85
+      Program 86: Program 86
+      Program 87: Program 87
+      Program 88: Program 88
+      Program 89: Program 89
+      Program 90: Program 90
+      Program 91: Program 91
+      Program 92: Program 92
+      Program 93: Program 93
+      Program 94: Program 94
+      Program 95: Program 95
+      Program 96: Program 96
+      Program 97: Program 97
+      Program 98: Program 98
+      Program 99: Program 99
+      Program 100: Program 100
+      Program 101: Program 101
+      Program 102: Program 102
+      Program 103: Program 103
+      Program 104: Program 104
+      Program 105: Program 105
+      Program 106: Program 106
+      Program 107: Program 107
+      Program 108: Program 108
+      Program 109: Program 109
+      Program 110: Program 110
+      Program 111: Program 111
+      Program 112: Program 112
+      Program 113: Program 113
+      Program 114: Program 114
+      Program 115: Program 115
+      Program 116: Program 116
+      Program 117: Program 117
+      Program 118: Program 118
+      Program 119: Program 119
+      Program 120: Program 120
+      Program 121: Program 121
+      Program 122: Program 122
+      Program 123: Program 123
+      Program 124: Program 124
+      Program 125: Program 125
+      Program 126: Program 126
+      Program 127: Program 127
+      Program 128: Program 128
+      Program 129: Program 129
+      Program 130: Program 130
+      Program 131: Program 131
+      Program 132: Program 132
+      Program 133: Program 133
+      Program 134: Program 134
+      Program 135: Program 135
+      Program 136: Program 136
+      Program 137: Program 137
+      Program 138: Program 138
+      Program 139: Program 139
+      Program 140: Program 140
+      Program 141: Program 141
+      Program 142: Program 142
+      Program 143: Program 143
+      Program 144: Program 144
+      Program 145: Program 145
+      Program 146: Program 146
+      Program 147: Program 147
+      Program 148: Program 148
+      Program 149: Program 149
+      Program 150: Program 150
+      Program 151: Program 151
+      Program 152: Program 152
+      Program 153: Program 153
+      Program 154: Program 154
+      Program 155: Program 155
+      Program 156: Program 156
+      Program 157: Program 157
+      Program 158: Program 158
+      Program 159: Program 159
+      Program 160: Program 160
+      Program 161: Program 161
+      Program 162: Program 162
+      Program 163: Program 163
+      Program 164: Program 164
+      Program 165: Program 165
+      Program 166: Program 166
+      Program 167: Program 167
+      Program 168: Program 168
+      Program 169: Program 169
+      Program 170: Program 170
+      Program 171: Program 171
+      Program 172: Program 172
+      Program 173: Program 173
+      Program 174: Program 174
+      Program 175: Program 175
+      Program 176: Program 176
+      Program 177: Program 177
+      Program 178: Program 178
+      Program 179: Program 179
+      Program 180: Program 180
+      Program 181: Program 181
+      Program 182: Program 182
+      Program 183: Program 183
+      Program 184: Program 184
+      Program 185: Program 185
+      Program 186: Program 186
+      Program 187: Program 187
+      Program 188: Program 188
+      Program 189: Program 189
+      Program 190: Program 190
+      Program 191: Program 191
+      Program 192: Program 192
+      Program 193: Program 193
+      Program 194: Program 194
+      Program 195: Program 195
+      Program 196: Program 196
+      Program 197: Program 197
+      Program 198: Program 198
+      Program 199: Program 199
+      Program 200: Program 200
+      Program 201: Program 201
+      Program 202: Program 202
+      Program 203: Program 203
+      Program 204: Program 204
+      Program 205: Program 205
+      Program 206: Program 206
+      Program 207: Program 207
+      Program 208: Program 208
+      Program 209: Program 209
+      Program 210: Program 210
+      Program 211: Program 211
+      Program 212: Program 212
+      Program 213: Program 213
+      Program 214: Program 214
   root:
     welcome: Welcome to Rainbow, Transparency International Georgia's data-visualization catalog.
     data-viz: Here's the list of our data-visualizations
