--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -146,6 +146,247 @@ ka:
     Order and Security: საზოგადოებრივი წესრიგის და უსაფრთხოების
     Energy: ენერგეტიკის
     Patriarchy: საპატრიარქოს
+    priorities:
+      Priority 1: პარლამენტი
+      Priority 2: საქართველოს მთავრობის ადმინისტრაცია და საჯარო სამსახური
+      Priority 3: საქართველოს პრეზიდენტი
+      Priority 4: ფინანსები
+      Priority 5: ეკონომიკა
+      Priority 6: რეგიონული განვითარება და ინფრასტრუქტურა
+      Priority 7: იუსტიცია
+      Priority 8: სასჯელაღსრულება
+      Priority 9: საგარეო საქმეები
+      Priority 10: თავდაცვა
+      Priority 11: საზოგადოებრივი წესრიგი
+      Priority 12: დაზვერვა
+      Priority 13: კულტურა
+      Priority 14: იძულებით გადაადგილებული პირები, განსახლება და ლტოლვილები, სამოქალაქო თანასწორობა
+      Priority 15: ენერგეტიკა
+      Priority 16: გარემოს დაცვა
+      Priority 17: სპორტისა და ახალგაზრდობის საქმეები
+      Priority 18: რეგიონული ადმინისტრაციები
+      Priority 19: საარჩევნო გარემო
+      Priority 20: სასამართლო ხელისუფლება
+      Priority 21: საპატრიარქო
+      Priority 22: საერთო სახელმწიფოებრივი მნიშვნელობის გადასახდელები
+      Priority 23: განათლება და მეცნიერება
+      Priority 24: ჯანმრთელობა და სოციალური დაცვა
+      Priority 25: სოფლის მეურნეობა
+    programs:
+      Program 1: საკანონმდებლო საქმიანობა
+      Program 2: პარლამენტის საბიბლიოთეკო საქმიანობა
+      Program 3: პარლამენტის მიერ ჰერალდიკური საქმიანობის სახელმწიფო რეგულირება
+      Program 4: საქართველოს მთავრობის კანცელარია
+      Program 5: საჯარო სამსახურის ბიურო
+      Program 6: საქართველოს პრეზიდენტის ადმინისტრაცია
+      Program 7: საქართველოს ეროვნული უშიშროების საბჭოს აპარატი
+      Program 8: სახელმწიფო ფინანსების მართვა
+      Program 9: შემოსავლების მობილიზება და გადამხდელთა მომსახურების გაუმჯობესება
+      Program 10: ეკონომიკური დანაშაულის პრევენცია
+      Program 11: ფინანსების მართვის ელექტრონული და ანალიტიკური უზრუნველყოფა
+      Program 12: საფინანსო სექტორში დასაქმებულთა კვალიფიკაციის ამაღლება
+      Program 13: სახელმწიფო აუდიტის სამსახური
+      Program 14: ეკონომიკური პოლიტიკის შემუშავება და განხორციელება
+      Program 15: სახელმწიფო ქონების მართვა
+      Program 16: "ელექტრონული კომუნიკაციების, საინფორმაციო ტექნოლოგიებისა და საფოსტო კავშირის განვითარება"
+      Program 17: ტექნიკური და სამშენებლო  სფეროს რეგულირება
+      Program 18: სტანდარტიზაციისა და მეტროლოგიის სფეროს განვითარება
+      Program 19: აკრედიტაციის პროცესის მართვა და განვითარება
+      Program 20: ტურიზმის განვითარების ხელშეწყობა
+      Program 21: აეროპორტებში საჰაერო ხომალდების აფრენა-დაფრენისათვის საჭირო მომსახურების ხარჯების ანაზღაურება
+      Program 22: ბაქო–თბილისი–ყარსის სარკინიგზო მაგისტრალის მშენებლობისათვის მარაბდა–ახალქალაქი–კარწახის მონაკვეთზე კერძო მიწების გამოსყიდვა-კომპენსაცია
+      Program 23: სავაჭრო-სამრეწველო პალატა
+      Program 24: "კონკურენციისა და სახელმწიფო შესყიდვების სააგენტო (სააგენტოს ბაზაზე ჩამოყალიბდა სახელმწიფო შესყიდვების სააგენტო და კონკურენციის სააგენტო, თუმცა მათი დაფინანსება 2014 წლის სახ. ბიუჯეტში  ცალ-ცალკე არ არის მოცემული)"
+      Program 25: სახელმწიფო ობიექტების მოვლა-შენახვა
+      Program 26: სტატისტიკური სამუშაოების დაგეგმვა და მართვა
+      Program 27: სტატისტიკური სამუშაოების სახელმწიფო პროგრამა
+      Program 28: მოსახლეობისა და საცხოვრისების საყოველთაო აღწერა
+      Program 29: საქართველოს დაზღვევის სახელმწიფო ზედამხედველობის სამსახური
+      Program 30: საინვესტიციო პოლიტიკის დაგეგმვა და მართვა
+      Program 31: ინვესტიციების მოზიდვის ხელშეწყობა
+      Program 32: საავტომობილო გზების პროგრამების მართვა
+      Program 33: გზების მშენებლობა და მოვლა-შენახვა
+      Program 34: ჩქაროსნული ავტომაგისტრალების მშენებლობა
+      Program 35: რეგიონული და მუნიციპალური ინფრასტრუქტურის რეაბილიტაცია
+      Program 36: "სამართალშემოქმედებისა და ქვეყნის ინტერესების სამართლებრივი მხარდაჭერის მიზნით სახელმწიფო პოლიტიკის შემუშავება და მართვა, მათ შორის, სისხლის სამართლის სისტემის რეფორმის განხორციელება"
+      Program 37: "გამოძიებაზე ზედამხედველობის, სახელმწიფო ბრალდების მხარდაჭერის, დანაშაულის წინააღმდეგ ბრძოლისა და პრევენციის პროგრამა"
+      Program 38: "ეროვნული საარქივო ფონდის დაცულობის, მომსახურების თანამედროვე ტექნოლოგიების დანერგვის და დოკუმენტების ხელმისაწვდომობის უზრუნველყოფა"
+      Program 39: იუსტიციის სამინისტროს სისტემის თანამშრომელთა გადამზადება და სასწავლო ცენტრის განვითარება
+      Program 40: ელექტრონული მმართველობის განვითარება
+      Program 41: ერთიანი სახელმწიფო საინფორმაციო ტექნოლოგიების მხარდაჭერის განვითარება
+      Program 42: დანაშაულის პრევენცია და ინოვაციური პროგრამები
+      Program 43: სახელმწიფო სერვისების განვითარების სააგენტოს მომსახურებათა განვითარება და ხელმისაწვდომობა
+      Program 44: საჯარო რეესტრის ეროვნული სააგენტოს მომსახურებათა განვითარება და ხელმისაწვდომობა
+      Program 45: იუსტიციის სახლის მომსახურებათა განვითარება და ხელმისაწვდომობა
+      Program 46: პერსონალური ინფორმაციის დაცვის ინსპექტორის აპარატი
+      Program 47: საქართველოს სახალხო დამცველის აპარატი
+      Program 48: პენიტენციური სისტემის პოლიტიკის შემუშავება და მართვა
+      Program 49: საერთაშორისო სტანდარტების შესაბამისი პატიმრობისა და თავისუფლების აღკვეთის აღსრულების სისტემის ჩამოყალიბება
+      Program 50: სრულყოფილი პრობაციის სისტემა
+      Program 51: უფასო იურიდიული დახმარება
+      Program 52: სასჯელაღსრულებისა და პრობაციის სისტემისათვის თანამშრომელთა მომზადება და პროფესიული განვითარება
+      Program 53: ბრალდებულთა და მსჯავრდებულთა უზრუნველყოფა ეკვივალენტური სამედიცინო მომსახურებით
+      Program 54: საგარეო პოლიტიკის დაგეგმვა და მართვა
+      Program 55: საერთაშორისო ორგანიზაციებში არსებული ფინანსური ვალდებულებების უზრუნველყოფა
+      Program 56: საერთაშორისო ხელშეკრულებების და სხვა დოკუმენტების თარგმნა და დამოწმება
+      Program 57: მოხელეთა კვალიფიკაციის ამაღლება საერთაშორისო ურთიერთობების დარგში
+      Program 58: ევროპულ და ევროატლანტიკურ სტრუქტურებში ინტეგრაციის საკითხებში საქართველოს სახელმწიფო მინისტრის აპარატი
+      Program 59: დიასპორის საკითხებში საქართველოს სახელმწიფო მინისტრის აპარატი
+      Program 60: შეიარაღებული ძალების მზადყოფნის შენარჩუნება და ამაღლება
+      Program 61: სამხედრო განათლების განვითარება
+      Program 62: საქართველოს თავდაცვის სამინისტროს პერსონალის ჯანმრთელობის დაცვა და სოციალური უზრუნველყოფა
+      Program 63: თავდაცვის სფეროში სამეცნიერო კვლევების ხელშეწყობა
+      Program 64: "საზოგადოებრივი წესრიგი, სახელმწიფო საზღვრის დაცვა და საერთაშორისო თანამშრომლობის განვითარება/გაღრმავება"
+      Program 65: ეროვნული საგანძურისა და დიპლომატიური წარმომადგენლობების დაცვის უსაფრთხოების დონის ამაღლება
+      Program 66: "სამართალდამცავი სტრუქტურებისათვის მაღალკვალიფიციური კადრების მომზადება, გადამზადება, საარქივო ფონდების დიგიტალიზაცია, სამეცნიერო-კვლევითი საქმიანობა და მოქალაქეთა მომსახურება"
+      Program 67: შინაგან საქმეთა სამინისტროს სისტემის მოსამსახურეთა ჯანმრთელობის დაცვის მომსახურეობით უზრუნველყოფა
+      Program 68: სახელმწიფო მატერიალური რეზერვების შექმნა და მართვა
+      Program 69: დასაცავ პირთა და ობიექტთა უსაფრთხოების უზრუნველყოფა
+      Program 70: საქართველოს დაზვერვის სამსახური
+      Program 71: საქართველოს კულტურისა და ძეგლთა დაცვის სფეროში პოლიტიკის შემუშავება და პროგრამების მართვა
+      Program 72: ხელოვნების დარგების განვითარების ხელშეწყობა და პოპულარიზაცია საქართველოში და მის ფარგლებს გარეთ
+      Program 73: სახელოვნებო განათლების სისტემის ხელშეწყობა
+      Program 74: მუზეუმების ხელშეწყობა
+      Program 75: კულტურული მემკვიდრეობის დაცვა
+      Program 76: კულტურის სფეროს ფინანსური გაძლიერების პროგრამა
+      Program 77: კულტურის სფეროს მდგრადობის უზრუნველყოფის საინვესტიციო ფონდი
+      Program 78: საზოგადოებრივი მაუწყებელი
+      Program 79: იძულებით გადაადგილებულ პირთა და მიგრანტთა ხელშეწყობის მიზნით სახელმწიფო პოლიტიკის შემუშავება და პროგრამების მართვა
+      Program 80: განსახლების ადგილებში დევნილთა შენახვა და მათი საცხოვრებელი პირობების გაუმჯობესება
+      Program 81: შერიგებისა და სამოქალაქო თანასწორობის საკითხებში  საქართველოს სახელმწიფო მინისტრის აპარატი
+      Program 82: ენერგეტიკის სფეროში პოლიტიკის შემუშავება და მართვა
+      Program 83: ყაზბეგის მუნიციპალიტეტისა და დუშეთის მუნიციპალიტეტის მაღალმთიანი სოფლების მოსახლეობისათვის მიწოდებული ბუნებრივი აირის ღირებულების ანაზღაურების ღონისძიება
+      Program 84: სასისტემო მნიშვნელობის ელექტროგადამცემი ქსელის განვითარება
+      Program 85: ხარაგაულის სათემო ტყის საცდელი პროექტი (გერმანიის რეკონსტრუქციის საკრედიტო ბანკი)
+      Program 86: "გარემოს დაცვის სფეროში პოლიტიკის შემუშავება, რეგულირება და მართვა"
+      Program 87: გარემოსდაცვითი ზედამხედველობა
+      Program 88: სატყეო სისტემის ჩამოყალიბება და მართვა
+      Program 89: სანერგე მეურნეობის სისტემის ჩამოყალიბება და მართვა
+      Program 90: გარემოსდაცვით ინფორმაციაზე ხელმისაწვდომობისა და გარემოსდაცვითი განათლების ხელშეწყობის პროგრამა
+      Program 91: "გარემოს დაცვის სფეროში მონიტორინგი, პროგნოზირება და პრევენცია"
+      Program 92: სპორტისა და ახალგაზრდობის საქმეთა სფეროების სახელმწიფო პოლიტიკის შემუშავება და მართვა
+      Program 93: სპორტის განვითარების ხელშეწყობის ღონისძიებები
+      Program 94: სპორტის სფეროში დამსახურებულ მოღვაწეთა სოციალური დაცვის ღონისძიებები
+      Program 95: ახალგაზრდობის სფეროში სახელმწიფო ხელშეწყობის ღონისძიებები
+      Program 96: "სახელმწიფო რწმუნებულის – გუბერნატორის ადმინისტრაცია აბაშის, ზუგდიდის, მარტვილის, მესტიის, სენაკის, ჩხოროწყუს, წალენჯიხის, ხობის მუნიციპალიტეტებსა და ფოთში"
+      Program 97: "სახელმწიფო რწმუნებულის – გუბერნატორის ადმინისტრაცია ლანჩხუთის, ოზურგეთისა და ჩოხატაურის მუნიციპალიტეტებში"
+      Program 98: "სახელმწიფო რწმუნებულის – გუბერნატორის ადმინისტრაცია ბაღდათის, ვანის, ზესტაფონის, თერჯოლის, სამტრედიის, საჩხერის, ტყიბულის, წყალტუბოს, ჭიათურის, ხარაგაულის, ხონის მუნიციპალიტეტებსა და თვითმმართველ ქალაქ ქუთაისში"
+      Program 99: "სახელმწიფო რწმუნებულის – გუბერნატორის ადმინისტრაცია ახმეტის, გურჯაანის, დედოფლისწყაროს, თელავის, ლაგოდეხის, საგარეჯოს, სიღნაღისა და ყვარლის მუნიციპალიტეტებში"
+      Program 100: "სახელმწიფო რწმუნებულის – გუბერნატორის ადმინისტრაცია დუშეთის, თიანეთის, მცხეთისა და ყაზბეგის მუნიციპალიტეტებში"
+      Program 101: "სახელმწიფო რწმუნებულის – გუბერნატორის ადმინისტრაცია ამბროლაურის, ლენტეხის, ონისა და ცაგერის მუნიციპალიტეტებში"
+      Program 102: "სახელმწიფო რწმუნებულის – გუბერნატორის ადმინისტრაცია ადიგენის, ასპინძის, ახალციხის, ახალქალაქის, ბორჯომისა და ნინოწმინდის მუნიციპალიტეტებში"
+      Program 103: "სახელმწიფო რწმუნებულის – გუბერნატორის ადმინისტრაცია ბოლნისის, გარდაბნის, დმანისის, თეთრი წყაროს, მარნეულის, წალკის მუნიციპალიტეტებსა და თვითმმართველ ქალაქ რუსთავში"
+      Program 104: "სახელმწიფო რწმუნებულის – გუბერნატორის ადმინისტრაცია გორის, კასპის, ქარელისა და ხაშურის მუნიციპალიტეტებში"
+      Program 105: სამხრეთ ოსეთის ადმინისტრაცია
+      Program 106: საარჩევნო გარემოს განვითარება
+      Program 107: არჩევნების ჩატარების ღონისძიებები
+      Program 108: საარჩევნო ინსტიტუციის განვითარების და სამოქალაქო განათლების ხელშეწყობა
+      Program 109: პოლიტიკური პარტიებისა და არასამთავრობო სექტორის დაფინანსება
+      Program 110: ამომრჩეველთა სიების დაზუსტების უზრუნველყოფის პროგრამა
+      Program 111: საქართველოს საკონსტიტუციო სასამართლო
+      Program 112: საქართველოს უზენაესი სასამართლო
+      Program 113: საერთო სასამართლოების სისტემის განვითარება და ხელშეწყობა
+      Program 114: მოსამართლეებისა და სასამართლოს თანამშრომლების მომზადება-გადამზადება
+      Program 115: საქართველოს იუსტიციის უმაღლესი საბჭო
+      Program 116: ლევან სამხარაულის სახელობის სასამართლო ექსპერტიზის ეროვნული ბიურო
+      Program 117: სასულიერო განათლების ხელშეწყობის გრანტი
+      Program 118: წმინდა სიმონ კანანელის სახელობის სასულიერო სწავლების ცენტრისათვის გადასაცემი გრანტი
+      Program 119: ბათუმისა და ლაზეთის ეპარქიის საგანმანათლებლო ცენტრისათვის გადასაცემი გრანტი
+      Program 120: "წმიდა ნინოს სახელობის ობოლ, უპატრონო და მზრუნველობამოკლებულ ბავშვთა პანსიონატისათვის გადასაცემი გრანტი"
+      Program 121: ბათუმის წმინდა მოწამე ეკატერინეს სახელობის სათნოების სავანისათვის გადასაცემი გრანტი
+      Program 122: წმინდა ანდრია პირველწოდებულის სახელობის სასულიერო სწავლების ცენტრისათვის გადასაცემი გრანტი
+      Program 123: წმინდა გიორგი მთაწმინდელის მონასტერთან არსებული სარეაბილიტაციო ცენტრისათვის გადასაცემი გრანტი
+      Program 124: წმინდა ანდრია პირველწოდებულის სახელობის ქართული უნივერსიტეტისათვის გადასაცემი გრანტი
+      Program 125: ტბელ აბუსერისძის სახელობის უნივერსიტეტისათვის გადასაცემი გრანტი
+      Program 126: სმენადაქვეითებულ ბავშვთა რეაბილიტაციის და ადაპტაციის ცენტრისათვის გადასაცემი გრანტი
+      Program 127: საპატრიარქოს ტელევიზიის სუბსიდირების ღონისძიებები
+      Program 128: ახალქალაქისა და კუმურდოს ეპარქიის სასწავლო ცენტრისთვის გადასაცემი გრანტი
+      Program 129: ფოთის საგანმანათლებლო და კულტურულ-გამაჯანსაღებელი ცენტრი
+      Program 130: საგარეო სახელმწიფო ვალდებულებების მომსახურება და დაფარვა
+      Program 131: საშინაო სახელმწიფო ვალდებულებების მომსახურება და დაფარვა
+      Program 132: საერთაშორისო ორგანიზაციებში საქართველოს მონაწილეობიდან გამომდინარე არსებული ვალდებულებები
+      Program 133: აფხაზეთის ავტონომიური რესპუბლიკისათვის გადასაცემი ტრანსფერი
+      Program 134: აჭარის ავტონომიური რესპუბლიკისათვის გადასაცემი ტრანსფერი
+      Program 135: ადგილობრივი თვითმმართველი ერთეულებისათვის გადასაცემი ტრანსფერები
+      Program 136: საქართველოს პრეზიდენტის სარეზერვო ფონდი
+      Program 137: საქართველოს მთავრობის სარეზერვო ფონდი
+      Program 138: წინა წლებში წარმოქმნილი დავალიანების დაფარვისა და სასამართლო გადაწყვეტილებების აღსრულების ფონდი
+      Program 139: საქართველოს რეგიონებში განსახორციელებელი პროექტების ფონდი
+      Program 140: სოფლის მხარდაჭერის პროგრამა
+      Program 141: საქართველოს სახელმწიფო ჯილდოებისათვის დაწესებული ერთდროული ფულადი პრემიების გაცემის ფინანსური უზრუნველყოფა
+      Program 142: "ორმხრივი, რეგიონალური და რეგიონთაშორისი პროექტები (გერმანიის საერთაშორისო თანამშრომლობის საზოგადოება)"
+      Program 143: KfW-ის ადგილობრივი ოფისის საოპერაციო ხარჯების თანადაფინანსება (გერმანიის რეკონსტრუქციის საკრედიტო ბანკი)
+      Program 144: აჭარის მყარი ნარჩენების პროექტი (ევროპის რეკონსტრუქციისა და განვითარების ბანკი)
+      Program 145: ხელვაჩაურის მუნიციპალიტეტის კომუნალური ინფრასტრუქტურის დაწესებულებათა რეაბილიტაცია (გერმანიის რეკონსტრუქციის საკრედიტო ბანკი)
+      Program 146: განათლებისა და მეცნიერების სფეროში სახელმწიფო პოლიტიკის შემუშავება და პროგრამების მართვა
+      Program 147: ზოგადსაგანმანათლებლო სკოლების დაფინანსება
+      Program 148: მასწავლებელთა პროფესიული განვითარების ხელშეწყობა
+      Program 149: უსაფრთხო საგანმანათლებლო გარემოს უზრუნველყოფა
+      Program 150: განსაკუთრებით ნიჭიერი ახალგაზრდების წახალისება
+      Program 151: განსაკუთრებული საჭიროების მქონე ბავშვების საგანმანათლებლო და საცხოვრებელი პირობებით უზრუნველყოფა და ინკლუზიური განათლების განვითარება
+      Program 152: მოსწავლეების სახელმძღვანელოებით უზრუნველყოფა
+      Program 153: საზაფხულო სკოლები
+      Program 154: ოკუპირებული რეგიონების პედაგოგებისა და ადმინისტრაციულ-ტექნიკური პერსონალის ფინანსური დახმარება
+      Program 155: სასჯელაღსრულების დაწესებულებებში განათლების მიღების ხელმისაწვდომობის პროგრამა
+      Program 156: ეროვნული სასწავლო გეგმების დანერგვა და მონიტორინგი
+      Program 157: ზოგადი განათლების ხელშეწყობის პროგრამები
+      Program 158: პროფესიული განათლების ხელმისაწვდომობის და ხარისხის გაუმჯობესება
+      Program 159: ეროვნული უმცირესობების პროფესიული გადამზადება
+      Program 160: განათლების მართვის საინფორმაციო სისტემა
+      Program 161: უმაღლესი საგანმანათლებლო და სამეცნიერო კვლევების პროგრამა
+      Program 162: "გამოცდების ორგანიზება, უმაღლესი საგანმანათლებლო და სამეცნიერო კვლევების პროგრამა"
+      Program 163: მეცნიერებისა და სამეცნიერო კვლევების ხელშეწყობა
+      Program 164: "სახელმწიფო სასწავლო, სამაგისტრო გრანტები, დოქტორანტურის პროგრამები და ახალგაზრდების წახალისება"
+      Program 165: საგანმანათლებლო დაწესებულებებისა და მოსწავლეების/სტუდენტების ინფორმაციულ-საკომუნიკაციო ტექნოლოგიებით უზრუნველყოფა
+      Program 166: საგანმანათლებლო დაწესებულებათა ინფრასტრუქტურის რეაბილიტაცია
+      Program 167: "შრომის, ჯანმრთელობისა და სოციალური დაცვის პროგრამების მართვა"
+      Program 168: "შრომის, ჯანმრთელობისა და სოციალური დაცვის სფეროში პოლიტიკის შემუშავება და მართვა"
+      Program 169: სამედიცინო საქმიანობის რეგულირების პროგრამა
+      Program 170: დაავადებათა კონტროლისა და ეპიდემიოლოგიური უსაფრთხოების პროგრამის მართვა
+      Program 171: სოციალური და ჯანმრთელობის დაცვის პროგრამების მართვა
+      Program 172: "სახელმწიფო ზრუნვის, ადამიანით ვაჭრობის (ტრეფიკინგის) მსხვერპლთა დაცვა და დახმარების პროგრამა"
+      Program 173: სამედიცინო მედიაციის პროგრამა
+      Program 174: ნარკომანიით დაავადებულ პირთა რეაბილიტაციის ხელშეწყობის პროგრამა
+      Program 175: სოციალური დაცვა და საპენსიო უზრუნველყოფა
+      Program 176: საპენსიო უზრუნველყოფა
+      Program 177: სოციალური დახმარებები
+      Program 178: სოციალური რეაბილიტაცია და ბავშვზე ზრუნვა
+      Program 179: ჯანმრთელობის დაზღვევა
+      Program 180: მოსახლეობის საყოველთაო ჯანმრთელობის დაცვა
+      Program 181: დაავადებათა ადრეული გამოვლენა და სკრინინგი
+      Program 182: იმუნიზაცია
+      Program 183: ეპიდზედამხედველობის პროგრამა
+      Program 184: უსაფრთხო სისხლი
+      Program 185: პროფესიულ დაავადებათა პრევენცია
+      Program 186: ინფექციური დაავადებების მართვა
+      Program 187: ტუბერკულოზის მართვა
+      Program 188: აივ ინფექცია/შიდსი
+      Program 189: დედათა და ბავშვთა ჯანმრთელობა
+      Program 190: ნარკომანია
+      Program 191: ფსიქიკური ჯანმრთელობა
+      Program 192: დიაბეტის მართვა
+      Program 193: ბავშვთა ონკოჰემატოლოგიური მომსახურება
+      Program 194: დიალიზი და თირკმლის ტრანსპლანტაცია
+      Program 195: ინკურაბელურ პაციენტთა პალიატიური მზრუნველობა
+      Program 196: იშვიათი დაავადებების მქონე და მუდმივ ჩანაცვლებით მკურნალობას დაქვემდებარებულ პაციენტთა მკურნალობა
+      Program 197: სასწრაფო გადაუდებელი დახმარება და სამედიცინო ტრანსპორტირება
+      Program 198: სოფლის ექიმი
+      Program 199: რეფერალური მომსახურება
+      Program 200: სამხედრო ძალებში გასაწვევ მოქალაქეთა სამედიცინო შემოწმება
+      Program 201: დიპლომისშემდგომი სამედიცინო განათლება
+      Program 202: სამედიცინო დაწესებულებათა რეაბილიტაცია და აღჭურვა
+      Program 203: შრომის პირობების მონიტორინგის პროგრამა
+      Program 204: სამუშაოს მაძიებელთა პროფესიული მომზადება-გადამზადების პროგრამა
+      Program 205: სოფლის მეურნეობის განვითარების პოლიტიკის შემუშავება და მართვა
+      Program 206: სოფლის მეურნეობის განვითარების პროგრამის მართვა და ადმინისტრირება რეგიონებში
+      Program 207: სამელიორაციო სისტემების მოდერნიზაცია
+      Program 208: ქართული აგროსასურსათო პროდუქციის პოპულარიზაცია
+      Program 209: სასოფლო-სამეურნეო კოოპერატივების ხელშეწყობის ღონისძიებები
+      Program 210: სოფლის მეურნეობის დარგში სამეცნიერო კვლევითი ღონისძიებების განხორციელება
+      Program 211: შეღავათიანი აგროკრედიტები
+      Program 212: მცირემიწიან ფერმერთა საგაზაფხულო სამუშაოების ხელშეწყობის ღონისძიებები
+      Program 213: "სურსათის უვნებლობა, მცენარეთა დაცვა და ეპიზოოტიური კეთილსაიმედოობა"
+      Program 214: მევენახეობა-მეღვინეობის განვითარება
   root:
       welcome: მოგესალმებით (Rainbow-ზე) ცისარტყელაზე, “საერთაშორისო გამჭვირვალობა - საქართველოს“ მონაცემების ვიზუალიზაციის კატალოგში.
       data-viz: მონაცემების ვიზუალიზაციის სია
