--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -127,7 +127,17 @@ ka:
         p1: მივიღეთ მოთხოვნა "%{app_name}" თქვენი პაროლის შეცვლის შესახებ. პაროლის შესაცვლელად, მიჰყევით შემდეგ ბმულს.
         link_title: პაროლის შეცვლა
         p2: "თუ თქვენ არ მოგითხოვიათ პაროლის შეცვლა, გთხოვთ, არ მიაქციოთ ყურადღება ამ შეტყობინებას."
-        p3: "თქვენი პაროლი იგივე დარჩება, სანამ არ გადახვალთ ზემოთ მითითებულ ბმულზე და შექმნით ახალ პაროლს."    
+        p3: "თქვენი პაროლი იგივე დარჩება, სანამ არ გადახვალთ ზემოთ მითითებულ ბმულზე და შექმნით ახალ პაროლს."
+  scripts_messages:
+    funds_distributed_correctly: თანხები სწორად იქნა გადანაწილებული.
+    distribute_it_to_right: გადაანაწილეთ მარჯვენა მხარის პროგრამებში
+    funds_cannot_be_redistributed: დაფინანსება ვერ გადანაწილდება მარცხენა სვეტში.
+    program_reset: პროგრამა განახლდა.
+    too_much_allocated: ზედმეტი თანხა იქნა გადანაწილებული მოცემული პროგრამისთვის. განახლდა ბოლო 2-ჯერ შეცვლილი თანხის რაოდენობა
+    cannot_take_money_right: მარჯვენა სვეტიდან თანხის გადაცემა ვერ მოხერხდება გადარიცხვამდე
+    money_still_to_be_allocated: "{1} {0} მილიონი ჯერ კიდევ გასანაწილებელია. გადაიტანეთ მარჯვენა სვეტის პროგრამაში."
+    money_taken_from: მილიონი აღებული იქნა
+    money_added_to: მილიონი დაემატა
   budget:
     Agriculture: სოფლის მეურნეობის
     Culture: კულტურის და ძეგლთა დაცვის
@@ -146,6 +156,12 @@ ka:
     Order and Security: საზოგადოებრივი წესრიგის და უსაფრთხოების
     Energy: ენერგეტიკის
     Patriarchy: საპატრიარქოს
+    georgian_budget_2014: საქართველოს ბიუჯეტი 2014
+    please_move_funds: გთხოვთ გადაიტანოთ თანხა მარცხენა პროგრამიდან მარჯვენა სამი მთავარი პროგრამიდან ერთ-ერთში.
+    conclusion_title: რა შეიძლება მოხდეს?
+    funds_shown_millions: (თანხა ნაჩვენებია მილიონ ლარებში)
+    close_continue: Continue transferring funds
+    reset_page: Reset the page
     priorities:
       Priority 1: პარლამენტი
       Priority 2: საქართველოს მთავრობის ადმინისტრაცია და საჯარო სამსახური
