--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -136,8 +136,8 @@ en:
       too_much_allocated: Too much was allocated on this main program. The 2 lastly modified amounts were reset.
       cannot_take_money_right: You can't take money out of a right-hand side column, while transferring.
       money_still_to_be_allocated: "{0} million(s) from {1} are still to be allocated. Distribute it to a right-hand side program."
-      money_taken_from: million(s) have been taken from
-      money_added_to: million(s) have been added to
+      money_taken_from: "{0} million(s) have been taken from {1}"
+      money_added_to: "{0} million(s) have been added to {1}"
   budget:
     Agriculture: Agriculture
     Culture: Culture
@@ -164,6 +164,8 @@ en:
     close_continue: Continue transferring funds
     left_hand_tab: Left hand column
     right_hand_tab: Right hand column
+    controller_money_taken_from: "%{amount} million(s) have been taken from %{program_description}"
+    controller_money_added_to: "%{amount} million(s) have been added to %{program_description}"
     priorities:
       Priority 1: Priority 1
       Priority 2: Priority 2
